Fix height on mobile (RIP `100vh`).

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+/* Workaround because 100vh doesn't work as intended in mobile browsers.
+ * See https://nicolas-hoizey.com/articles/2015/02/18/viewport-height-is-taller-than-the-visible-part-of-the-document-in-some-mobile-browsers/. */
+html, body, #root {
+  height: 100%;
+}
+
 .App-logo {
   pointer-events: none;
   filter: hue-rotate(-90deg);
